calendar api unfinished

--- a/www/calendar.html
+++ b/www/calendar.html
@@ -41,6 +41,23 @@
 
       <iframe src="https://calendar.google.com/calendar/embed?src=c_68p2ou1unf5kgkbecbl4oiutu4%40group.calendar.google.com&ctz=Europe%2FLondon" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
+      <form action="http://localhost:8080/events" method="POST">
+        <br><br>
+        <label for="Bill Type">Bill Name</label>
+        <input type="Bill Name" type="text" placeholder="enter bill name">
+        <br>
+        <label for="Paid to">Paid to</label>
+        <input type="Account Name" type="text" placeholder="enter account name">
+        <br>
+        <label for="Amount Due">Amount Due</label>
+        <input type="debt" type="text" placeholder="enter amount to pay">
+        <br>
+        <label for="Due Date">Due Date</label>
+        <input type="Date" type="date" placeholder="due date">
+        <br>
+        <input type="Submit" value="Add bill">
+      </form>
+
     </div>
   </body>
   <script src='/scripts/google-auth.js'></script>
