--- a/www/budget-report.html
+++ b/www/budget-report.html
@@ -34,7 +34,7 @@
       <hr>
       <div class="subpage-content">
         <div class="saving-tips-intro">
-          <p>Enim nec dui nunc mattis enim ut tellus elementum sagittis. Scelerisque viverra mauris in aliquam sem fringilla ut morbi. Id donec ultrices tincidunt arcu non sodales neque. Id volutpat lacus laoreet non curabitur gravida arcu. Urna nec tincidunt praesent semper feugiat. Tempus quam pellentesque nec nam aliquam sem. </p>
+          <p>This report reviews your finances over the couple of years and after reviewing your finances, it then displays your finances in the chart which varies based on the income and spending made. Furthermore the chart underneath shows how much has been spent monthly and shows if their spending has increase or decreased each month </p>
         </div>
 
         <div class="budget-report">
