--- a/www/budget-report.html
+++ b/www/budget-report.html
@@ -34,7 +34,7 @@
       <hr>
       <div class="subpage-content">
         <div class="saving-tips-intro">
-          <p>This report reviews your finances over the couple of years and after reviewing your finances, it then displays your finances in the chart which varies based on the income and spending made. Furthermore the chart underneath shows how much has been spent monthly and shows if their spending has increase or decreased each month </p>
+          <p>This report reviews your finances over the couple of months and after reviewing your finances, it then displays your finances in the chart which varies based on the income and spending made. Furthermore the chart underneath shows how much has been spent monthly and shows if their spending has increase or decreased each month </p>
         </div>
 
         <div class="budget-report">
