--- a/www/contact.html
+++ b/www/contact.html
@@ -44,9 +44,11 @@
         </div>
 
         <div class="contact-side-text">
-          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. Nulla pellentesque dignissim enim sit amet venenatis. Leo duis ut diam quam nulla porttitor massa. Tristique risus nec feugiat in fermentum posuere urna nec. Vitae et leo duis ut. Vivamus arcu felis bibendum ut.</p>
+          <p> Want to talk? What ever question you may have whether big or quick where are here to help. We will get back to you during working days as soon as we can</p>
 
-          <p>Elit pellentesque habitant morbi tristique senectus et netus. Adipiscing bibendum est ultricies integer quis auctor. Tincidunt id aliquet risus feugiat in ante metus dictum. Quis viverra nibh cras pulvinar mattis nunc. Mi sit amet mauris commodo quis imperdiet massa tincidunt nunc. Ipsum dolor sit amet consectetur adipiscing elit. Lacus vel facilisis volutpat est velit.</p>
+          <p>Here are other ways to contact us.</p>
+          <p> Call us on +44 (0)1144960704.</p>
+          <p>Email us on budgetingstudents@hotmail.com.</p>
 
         </div>
 
