--- a/www/contact.html
+++ b/www/contact.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="contact-side-text">
-          <p> Want to talk? What ever question you may have whether big or quick where are here to help. We will get back to you during working days as soon as we can</p>
+          <p> Want to talk? What ever question you may have whether big or quick we are here to help. We will get back to you as soon as we can.</p>
 
           <p>Here are other ways to contact us.</p>
           <p> Call us on +44 (0)1144960704.</p>
