--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -40,7 +40,7 @@
             <img src="/images/pi-chart.png" alt="">
             <h2>Budget Report</h2>
             <hr>
-            <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+            <p>Reviews and displays how we would come across budgeting your finances based on the results after analying your details.</p>
             <a href="/budget-report.html"><div class="default-button">View</div></a>
           </div>
 
@@ -48,7 +48,7 @@
             <img src="/images/bank.png" alt="">
             <h2>Bank Statements</h2>
             <hr>
-            <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+            <p> Displays your bank statement base on your transaction coming in and out from your local bank .</p>
             <a href="/bank-statements.html"><div class="default-button">View</div></a>
           </div>
 
@@ -56,7 +56,7 @@
             <img src="/images/money.png" alt="">
             <h2>Purchases</h2>
             <hr>
-            <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+            <p>Displays a record  of all purchases been made throughout the use of this website</p>
             <a href="/purchases.html"><div class="default-button">View</div></a>
           </div>
 
@@ -64,7 +64,7 @@
             <img src="/images/calendar-512.png" alt="">
             <h2>Calendar</h2>
             <hr>
-            <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+            <p>Displays the times where purchases have been made in the calendar as that day and month would be highlighted.</p>
             <a href="/calendar.html"><div class="default-button">View</div></a>
           </div>
 
@@ -72,7 +72,7 @@
             <img src="/images/Wallet-icon.png" alt="">
             <h2>Money Saving Tips</h2>
             <hr>
-            <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. </p>
+            <p>Provides tips in ways to help students to budget their finances to prevent them from having financial issue.</p>
             <a href="/saving-tips.html"><div class="default-button">View</div></a>
           </div>
 
@@ -83,21 +83,21 @@
         <h3>Upcoming Payments</h3>
         <hr>
         <div class="panel-content">
-          <p>Ipsum Lorem</p>
+          <p>Rent</p>
           <hr>
-          <p>Ipsum Lorem</p>
+          <p>Netflix</p>
           <hr>
-          <p>Ipsum Lorem</p>
+          <p>Spotify</p>
           <hr>
-          <p>Ipsum Lorem</p>
+          <p>Lidl</p>
           <hr>
-          <p>Ipsum Lorem</p>
+          <p>Nike</p>
           <hr>
-          <p>Ipsum Lorem</p>
+          <p>Vue</p>
           <hr>
-          <p>Ipsum Lorem</p>
+          <p>Sports Direct</p>
           <hr>
-          <p>Ipsum Lorem</p>
+          <p>Asda</p>
           <hr>
         </div>
       </div>
