--- a/www/contact.html
+++ b/www/contact.html
@@ -38,6 +38,7 @@
               <li><label for="Phone Number">Phone Number</label><br><input type="text"></li>
               <li><label for="Subject">Subject</label><br><input type="text"></li>
               <li><label for="Message">Message</label><br><textarea name="message" id="message" cols="30" rows="10"></textarea></li>
+              <button class="default-button">Submit</button>
             </ul>
           </form>
 
