--- a/www/bank-statements.html
+++ b/www/bank-statements.html
@@ -33,10 +33,15 @@
       <h1 class="content-title">Bank Statements</h1>
       <hr>
       <div class="subpage-content bank-statements">
+        <div class="saving-tips-intro">
+          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. Nulla pellentesque dignissim enim sit amet venenatis. Leo duis ut diam quam nulla porttitor massa. Tristique risus nec feugiat in fermentum posuere urna nec.  </p>
+        </div>
 
-        <section class='statement-upload' id='fileContainer'>
-          <input type=file class='file-uploader' id='fileUpload' accept='.qif'/><br>
-        </section>
+        <div class="saving-tips-intro">
+          <section class='statement-upload' id='fileContainer'>
+            <input type=file class='file-uploader' id='fileUpload' accept='.qif'/><br>
+          </section>
+        </div>
 
       </div>
 
