--- a/www/budget-report.html
+++ b/www/budget-report.html
@@ -81,9 +81,9 @@
     </div>
   </body>
 
-  
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
-  <script src="scripts/budget-report.js"></script>
+  <script src="/scripts/budget-report.js"></script>
 
   <script src='/scripts/google-auth.js'></script>
 </html>
