--- a/www/bank-statements.html
+++ b/www/bank-statements.html
@@ -34,7 +34,7 @@
       <hr>
       <div class="subpage-content bank-statements">
         <div class="saving-tips-intro">
-          <p>Aliquet porttitor lacus luctus accumsan tortor. Sagittis orci a scelerisque purus semper eget duis. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. Nulla pellentesque dignissim enim sit amet venenatis. Leo duis ut diam quam nulla porttitor massa. Tristique risus nec feugiat in fermentum posuere urna nec.  </p>
+          <p>The Bank Statement displays a record of all the transactions that have been made overall. As this shows transactions coming in and out your account and a total  of how much came in and out our users account. </p>
         </div>
 
         <div class="saving-tips-intro">
