--- a/www/about.html
+++ b/www/about.html
@@ -33,9 +33,9 @@
         <p class="about-text"> Student Budgets is a free budgeting site which is set up to help students save every penny. Who doesn’t mind the extra few coins at the end of the month? The site searches for some of the best discounted deals on the internet, which will enable students to use these discount codes and make a saving in their purchase. You are one-click away from making a saving. Students Budgets has automatically directed discounted links to making sites such as Spotify for the lovers, all the way to Apple for the technology gurus. Searches for and tests available coupon codes at checkout on over 10,000+ popular sites. If we find a working code, we then apply the one with the biggest savings to your cart like magic. Ta da! Student Budgets can even search for better prices on Amazon. Who knew? Well, we did. And now so do you. Thanks to Student Budgets, you can earn rewards just for shopping on participating sites. We’re always adding new stores and features so stay tuned.</p>
 
         <hr>
-        <h3>"Who doesn’t mind the extra few coins at the end of the month?"</h3>
+        <h3>"Who would not  mind the extra few coins at the end of the month?"</h3>
         <hr>
-        <p class="about-text">Enim nec dui nunc mattis enim ut tellus elementum sagittis. Scelerisque viverra mauris in aliquam sem fringilla ut morbi. Id donec ultrices tincidunt arcu non sodales neque. Id volutpat lacus laoreet non curabitur gravida arcu. Urna nec tincidunt praesent semper feugiat. Tempus quam pellentesque nec nam aliquam sem. Ultrices tincidunt arcu non sodales neque sodales ut etiam. Tempor id eu nisl nunc. Dignissim convallis aenean et tortor at risus. Suscipit adipiscing bibendum est ultricies integer quis auctor. Nisl nunc mi ipsum faucibus vitae. Volutpat ac tincidunt vitae semper quis. Turpis massa tincidunt dui ut. Risus quis varius quam quisque id.</p>
+        <p class="about-text">From UNiDAYS to Student Beans, if you are school, university or college  you could get student discounts on everything in relation to food, fashion, technology , music and others with the  discounted sites  we have offered .</p>
 
       </div>
 
