--- a/www/bank-statements.html
+++ b/www/bank-statements.html
@@ -35,7 +35,7 @@
       <div class="subpage-content bank-statements">
         <div class="saving-tips-intro">
           <p>The Bank Statement displays a record of all the transactions that have been made overall.</p>
-          <p> As this shows transactions coming in and out your account and a total  of how much came in and out our users account.</p>
+          <p> As this shows transactions coming in and out your account and a total  of how much came in and out your local bank.</p>
           <p>Upload Bank Statement Below</p>
         </div>
 
