--- a/www/welcomePage.html
+++ b/www/welcomePage.html
@@ -42,25 +42,25 @@
 
     <!-- MAIN CONTENT -->
     <div class="main">
-      <h1>Lorem ipsum dolor sit amet</h1>
+      <h1>Welcome</h1>
       <br />
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mattis pellentesque id nibh tortor id. Faucibus et molestie ac feugiat sed lectus vestibulum. Quisque id diam vel quam elementum pulvinar etiam non. Erat pellentesque adipiscing commodo elit. Phasellus vestibulum lorem sed risus ultricies. Ante metus dictum at tempor commodo ullamcorper a lacus vestibulum. Urna porttitor rhoncus dolor purus non enim praesent. </p>
+      <p> We are a budgeting site where we find ways for you to save extra money. From UNiDAYS to Student Beans, if you are school, university or college  you could get student discounts. </p>
       <br>
       <hr>
       <div class="welcome-content">
         <div>
           <img src="/images/bank.png" alt="">
-          <p>Quam pellentesque nec nam aliquam sem et. Dapibus ultrices in iaculis nunc sed augue. Faucibus nisl tincidunt eget nullam non nisi. Nibh sit amet commodo nulla facilisi nullam vehicula ipsum a.</p>
+          <p>Contact Us on +44 (0)1144960704</p>
         </div>
         <div>
           <img src="/images/money.png" alt="">
-          <p>Duis ultricies lacus sed turpis tincidunt id. Ultrices gravida dictum fusce ut placerat orci nulla pellentesque. Volutpat est velit egestas dui id. Nisl condimentum id</p>
+          <p>Email us on budgetingstudents@hotmail.com.</p>
         </div>
 
         <div>
           <p><a href="/calendar.html">
           <img src="/images/calendar-512.png" alt=""></p>
-          <p>Sed elementum tempus egestas sed. Posuere lorem ipsum dolor sit amet. Ut faucibus pulvinar elementum integer enim neque.Sed elementum tempus egestas sed. Posuere lorem ipsum dolor sit amet. Ut faucibus pulvinar elementum integer enim neque.</p>
+          <p>2021 ServiceNow. All rights Reserved.</p>
         </div>
       </div>
     </div>
