CSS and wording changes

--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -83,23 +83,10 @@
         <h3>Upcoming Payments</h3>
         <hr>
         <div class="panel-content">
-          <p>Rent</p>
-          <hr>
-          <p>Netflix</p>
-          <hr>
-          <p>Spotify</p>
-          <hr>
-          <p>Lidl</p>
-          <hr>
-          <p>Nike</p>
-          <hr>
-          <p>Vue</p>
-          <hr>
-          <p>Sports Direct</p>
-          <hr>
-          <p>Asda</p>
-          <hr>
+          <p>- None -</p>
+           <a href="/calendar.html"><div class="default-button">View Calendar</div></a>
         </div>
+        
       </div>
     </div>
   </body>
