--- a/www/contact.html
+++ b/www/contact.html
@@ -20,8 +20,7 @@
           </ul>
       </nav>
       <ul class="nav-links">
-        <a href="/signInPage.html"><li class="nav-link">Sign In</li></a>
-        <a class="default-button" href="/signInPage.html">Sign Up</a>
+        <a class="default-button" href="/signInPage.html">Sign In / Register</a>
       </ul>
     </header>
 
